donation card added by ketki

--- a/App/src/app/app.component.scss
+++ b/App/src/app/app.component.scss
@@ -117,3 +117,8 @@ ion-note {
 ion-item.selected {
   --color: var(--ion-color-primary);
 }
+
+
+ion-button ion-back-button{
+  --background : var(--ion-color-light);
+}
