--- a/App/src/app/layout/pages/home/home.page.scss
+++ b/App/src/app/layout/pages/home/home.page.scss
@@ -1,24 +1,26 @@
-ion-lable{
-    font-weight: bolder;
+ion-lable {
+  font-weight: bolder;
 }
 
-ion-card-title{
-    font-size: small;
-    font-weight: bolder;
-    text-align: center;
+ion-card-title {
+  font-size: small;
+  font-weight: bolder;
+  text-align: center;
 }
 
-.tabs{
-    ion-card {
-        height: 90%;
-      }
-      ion-card img {
-        width: 100%;
-        height: auto; 
-        align-items: center;
-      }
-      ion-card-header {
-        height: auto; 
-      }
+.tabs {
+  ion-card {
+    height: 90%;
+  }
+  ion-card img {
+    width: 100%;
+    height: 120px;
+  }
+  ion-card-header {
+    height: auto;
+  }
 }
-  
+.slide-img{
+  height: 300px;
+  object-fit: cover;
+}
