--- a/App/src/app/layout/pages/home/home.page.html
+++ b/App/src/app/layout/pages/home/home.page.html
@@ -57,10 +57,10 @@
 
   <swiper-container speed="500" loop="true">
     <swiper-slide>
-      <img src="../../../../assets/ad1.png" alt="" />
+      <img class="slide-img" src="../../../../assets/ad1.png" alt="" />
     </swiper-slide>
     <swiper-slide>
-      <img src="../../../../assets/ad2.png" alt="" />
+      <img class="slide-img" src="../../../../assets/ad2.png" alt="" />
     </swiper-slide>
   </swiper-container>
 
