donation history and latest data added by ketki

--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.scss
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.scss
@@ -32,10 +32,12 @@ ion-card {
 
 .donar-container {
   display: flex;
+ 
 }
 .donar {
   padding-left: 10px;
 }
-i {
-  color: #c56959;
+i{
+  color: #c56959 !important;
+  height: 10px !important;
 }
