--- a/App/src/app/shared/models/donation-details/donation-details.component.scss
+++ b/App/src/app/shared/models/donation-details/donation-details.component.scss
@@ -1,5 +1,5 @@
 ion-card-header{
-    background-color: #922e1d;;
+    background-color: grey;
 }
 ion-card-title{
     --color: var(--ion-color-light);
@@ -7,5 +7,5 @@ ion-card-title{
 
 .head{
     font-weight: 600;
-    font-size: 1.15rem;
+    font-size: 1rem;
 }
