--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
@@ -29,19 +29,19 @@
                   <ion-card-title>A+</ion-card-title>
                 </ion-col>
                 <ion-col size="6">
-                  <ion-label class="name">ANUSHKA KALBANDE</ion-label>
+                  <ion-label class="name">Ketki Pande</ion-label>
                   <div class="ion-margin-top">
                     <i class="fa-solid fa-location-dot"></i>
                     <ion-label class="donar">Nagpur</ion-label>
                   </div>
                   <div class="ion-margin-top donar-container">
                     <div>
-                      <i class="fa-solid fa-landmark"></i>
-                      <ion-label class="donar">Donor Bank</ion-label>
+                      <i class="fa-solid fa-user"></i>
+                      <ion-label class="donar">Donor</ion-label>
                     </div>
                     <div class="ion-padding-start">
-                      <i class="fa-solid fa-person"></i>
-                      <ion-label class="donar">Donor</ion-label>
+                      <i class=" fa-solid fa-person-half-dress"></i>
+                      <ion-label class="donar">Gender</ion-label>
                     </div>
                   </div>
                 </ion-col>
@@ -56,22 +56,36 @@
         </ion-card>
       </div>
       <div *ngSwitchCase="'history'">
-        <ion-card>
-          <ion-card-content>
+        <ion-card (click)="openNewModel()">
+          <ion-card-content class="ion-no-padding">
             <ion-grid>
               <ion-row>
-                <ion-col>
-                  <ion-row>Ketki</ion-row>
-                  <ion-row>9075987170</ion-row>
-                  <ion-row>25Year</ion-row>
-                </ion-col>
                 <ion-col size="3" class="drop">
                   <img src="../../../../../assets/blood-unscreen.gif" alt="" />
                   <ion-card-title>A+</ion-card-title>
                 </ion-col>
-              </ion-row>
-              <ion-row class="ion-justify-content-center">
-                Blood Donated On : 2024-03-21
+                <ion-col size="6">
+                  <ion-label class="name">ANUSHKA KALBANDE</ion-label>
+                  <div class="ion-margin-top">
+                    <i class="icons-img fa-solid fa-location-dot"></i>
+                    <ion-label class="donar">Nagpur</ion-label>
+                  </div>
+                  <div class="ion-margin-top donar-container">
+                    <div>
+                      <i class="fa-solid fa-user"></i>
+                      <ion-label class="donar">Donor</ion-label>
+                    </div>
+                    <div class="ion-padding-start">
+                      <i class="icons-img fa-solid fa-person-half-dress"></i>
+                      <ion-label class="donar">Gender</ion-label>
+                    </div>
+                  </div>
+                </ion-col>
+                <!-- <ion-col size="3" class="btn-col">
+                  <ion-button class="detail-btn" (click)="openModel()">
+                    View Details
+                  </ion-button>
+                </ion-col> -->
               </ion-row>
             </ion-grid>
           </ion-card-content>
