--- a/App/src/app/shared/models/donation-history/donation-history.component.html
+++ b/App/src/app/shared/models/donation-history/donation-history.component.html
@@ -5,7 +5,7 @@
       defaultHref=""
       (click)="dismiss()"
     ></ion-back-button>
-    <ion-title>Donar Details</ion-title>
+    <ion-title>Donar History</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -42,14 +42,7 @@
                   <ion-label> : 8AM to 5PM</ion-label>
                 </ion-col>
               </ion-row>
-              <ion-row>
-                <ion-col>
-                  <ion-button>Accept</ion-button>
-                </ion-col>
-                <ion-col>
-                  <ion-button>Done</ion-button>
-                </ion-col>
-              </ion-row>
+             
             </ion-grid>
           </ion-card-content>
         </ion-card>
@@ -141,14 +134,7 @@
                   <ion-label>: 0</ion-label>
                 </ion-col>
               </ion-row>
-              <ion-row>
-                <ion-col>
-                  <ion-button>Accept</ion-button>
-                </ion-col>
-                <ion-col>
-                  <ion-button>Done</ion-button>
-                </ion-col>
-              </ion-row>
+            
             </ion-grid>
           </ion-card-content>
         </ion-card>
