--- a/App/src/app/layout/pages/donate/donate.page.html
+++ b/App/src/app/layout/pages/donate/donate.page.html
@@ -67,19 +67,7 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <ion-row class="ion-align-items-center ion-justify-content-center">
-          <ion-col size="12">
-            <ion-item fill="outline" class="input">
-              <ion-label position="floating" lablePlacement="stacked"
-                >illness</ion-label
-              >
-              <ion-input
-                placeholder="illness"
-                formControlName="illness"
-              ></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
+
         <!-- <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
             <ion-item fill="outline" class="input">
@@ -151,27 +139,7 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <!-- <ion-row class="ion-align-items-center ion-justify-content-center">
-          <ion-col size="12">
-            <ion-item fill="outline" class="input">
-              <ion-label position="floating">state</ion-label>
-              <ion-input
-                placeholder="state"
-                formControlName="state"
-              ></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row class="ion-align-items-center ion-justify-content-center">
-          <ion-col size="12">
-            <ion-item fill="outline" class="input">
-              <ion-label position="floating" lablePlacement="stacked"
-                >City</ion-label
-              >
-              <ion-input placeholder="City" formControlName="city"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row> -->
+        
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12" class="ion-justify-content-between">
             <ion-item fill="outline">
@@ -216,7 +184,7 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <ion-row class="ion-align-items-center ion-justify-content-center">
+        <!-- <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
             <ion-item fill="outline">
               <ion-select
@@ -236,7 +204,7 @@
               </ion-select>
             </ion-item>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
             <ion-item fill="outline">
@@ -246,10 +214,19 @@
                 placeholder="Select Gender"
                 formControlName="gender"
               >
-                <ion-select-option value="male">Male</ion-select-option>
-                <ion-select-option value="female">Female</ion-select-option>
+                <ion-select-option value="MALE">Male</ion-select-option>
+                <ion-select-option value="FEMALE">Female</ion-select-option>
               </ion-select>
             </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            
+              <ion-checkbox formControlName="illness" justify="start"
+                >Do you have any type of illness</ion-checkbox
+              >
+            
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
